--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -2,6 +2,7 @@
   margin-top: 100px;
   width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -66,19 +67,6 @@
   opacity: 0.75;
 }
 
-.modal {
-  margin-left: 35%;
-  margin-right: 35%;
-  width: 30%;
-  background-color: rgba(0, 0, 0, 0.7);
-  outline: none;
-}
-
-.modal__content {
-  width: fit-content;
-  color: aqua;
-}
-
 table {
   width: 100%;
 }
@@ -88,4 +76,10 @@ th {
 
 hr {
   border-color: aqua;
+}
+
+@media only screen and (max-width: 800px) {
+  .cart {
+    flex-direction: column-reverse;
+  }
 }
