--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -7,4 +7,5 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%2345a29e' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%231f2833' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%2361a9af' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%232f4c5f' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%237db0ba' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%2337748b' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%2398b6c2' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%233da0b3' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23b1bec6' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%2349cdd6' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23c5c6c7' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%2366fcf1' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
+  background-repeat: no-repeat;
 }
