--- a/src/components/Form/Login.css
+++ b/src/components/Form/Login.css
@@ -8,17 +8,17 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	margin:auto;
 	max-width:525px;
-	min-height:670px;
-	position:relative;
-	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+	min-height:500px;
+	position:relative;	
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+	margin-top: 100px;
 }
 .login-html{
 	width:100%;
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:var(--black_light);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -40,6 +40,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .button{
 	text-transform:uppercase;
+	color: var(--black__dark);
 }
 .login-html .tab{
 	font-size:22px;
@@ -51,8 +52,8 @@ a{color:inherit;text-decoration:none}
 }
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
-	color:#fff;
-	border-color:#1161ee;
+	color:var(--blue_dark);
+	border-color:var(--blue_cyan);
 }
 .login-form{
 	min-height:345px;
@@ -67,7 +68,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .input,
 .login-form .group .button{
 	width:100%;
-	color:#fff;
+	color:var(--black__dark);
 	display:block;
 }
 .login-form .group .input,
@@ -82,11 +83,11 @@ a{color:inherit;text-decoration:none}
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
+	color:var(--blue_dark);
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	background:var(--blue_cyan);
 }
 .login-form .group label .icon{
 	width:15px;
@@ -101,7 +102,7 @@ a{color:inherit;text-decoration:none}
 	content:'';
 	width:10px;
 	height:2px;
-	background:#fff;
+	background:var(--blue_dark);
 	position:absolute;
 	transition:all .2s ease-in-out 0s;
 }
@@ -117,10 +118,10 @@ a{color:inherit;text-decoration:none}
 	transform:scale(0) rotate(0);
 }
 .login-form .group .check:checked + label{
-	color:#fff;
+	color:var(--blue_dark);
 }
 .login-form .group .check:checked + label .icon{
-	background:#1161ee;
+	background:var(--blue_cyan);
 }
 .login-form .group .check:checked + label .icon:before{
 	transform:scale(1) rotate(45deg);
